--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SimpleSMS</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">SMS Shortcut</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_send_sms">SendSMS</string>
     <string name="phones">Phones:</string>
@@ -12,5 +11,7 @@
     <string name="add">Add</string>
     <string name="templateName">Template name</string>
     <string name="title_activity_preferences">Preferences</string>
+    <string name="title_activity_test">TestActivity</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
